kubernetes/new/encryptah-frontend-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    version: v1
  name: frontend-v1
spec:
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
        - name: encryptah-frontend
          image: jacobmammoliti/encryptah-frontend:1.0
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
      serviceAccountName: encryptah-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
    version: v1
