kubernetes/new/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: encryptah-ingress-v1
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: encryptah.blizzard.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: frontend-v1
             port:
               number: 8080
